--- a/Colorful Hero.vcxproj.filters
+++ b/Colorful Hero.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="LHSprites.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
